# Collegue

./: .editorconfig  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  FIX_TIMEOUT.md  LICENSE  README.en.md  README.md  T12_1_Analyse_Outils.md  alembic.ini  app.yaml  content.md  docker-compose.yml  entrypoint.sh  mcp_config.md  package.json  patch.py  plan_amelioration_prompts_llm.md  plan_collegue_mcp.md  pyproject.toml  requirements-dev.txt  requirements.txt  rules-mcp-collegue.md  sentry_monitor.py  taches_collegue_mcp.md  test-mcp.sh
.github/workflows/: evals-on-template-change.yml  integration-nightly.yml  pr585-real-qa-validation.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_state_schema.py  0002_checkpoint_unique_iteration.py  0003_project_approved_plan_hash.py  0004_task_issue_number.py  0005_task_attempts.py  (+5 more)
collegue/: __init__.py  app.py  config.py  health_server.py  textnorm.py
docs/: enhanced_prompt_system.md  guide_integration.md  guide_utilisateur.md  llm_evals.md  mcp_configuration_guide.md  mcp_fixes_documentation.md  moteur_autonome.md  multi_agent_expert_system.md  oauth.md  rate_limiting_and_quotas.md  reference_experts.md  sentry_configuration.md  sentry_setup_guide.md  solution_summary.md  stress_test_api_tools.md  test_mcp_connection_results.md  watchdog_deployment.md  website-plan.md
examples/: client_example.py
mcp_server/: github_client.py  sentry_utils.py
nginx/: nginx-https.conf.example  nginx.conf
scripts/: kc-provision.sh  patch_openhands_gemma4_terminal.py  purge_prompt_duplicates.py  validate_pr585_real_qa.py
tests/: conftest.py  test_ab_testing.py  test_ab_testing_simple.py  test_acceptance_gate.py  test_agent_loop.py  test_architecture_analysis.py  test_architecture_fixes.py  test_auth.py  test_base_tool_rate_limits.py  test_budget_guard.py  test_checkpoints.py  test_client.py  test_clients.py  test_clients_retry_logging.py  test_code_documentation.py  test_code_explanation.py  test_code_generation.py  test_code_review.py  test_context.py  test_core_components.py  test_core_paths.py  test_core_tools_optimization.py  test_dashboard_run_view.py  test_decomposer.py  test_deep_multi_agent.py  test_deep_phase2.py  test_delegation_chains.py  test_dependency_guard.py  test_docker_compose_config.py  test_documentation.py  test_documentation_fixes.py  test_endpoints.py  test_enhanced_prompt_system.py  test_entrypoint.py  test_env_validation.py  test_executor_agent.py  test_executor_pipeline.py  test_executor_pr.py  test_executor_quality_gate.py  test_executor_revert.py  (+116 more)
(+411 files in other folders)
