[project]
name = "collegue"
version = "1.0.0"
description = "Assistant de développement intelligent — serveur MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "VynoDePal", email = "kevyn.odjo@epitech.eu"},
]
dependencies = [
    "fastmcp[tasks,openai]>=3.0.0b2,<4.0.0",
    "fastapi>=0.116.1,!=0.136.3",
    "uvicorn>=0.35.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-core>=2.41.0,<3.0.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "google-genai>=1.62.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "kubernetes>=29.0.0",
    "sentry-sdk[opentelemetry]>=2.49.0,<3.0.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-api>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["collegue*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["stress", "prompts", "__pycache__"]
asyncio_mode = "auto"
addopts = "-q -m 'not integration'"
markers = [
    "slow: tests exceeding ~1s (rate-limit reset windows, soak scenarios)",
    "integration: live runs requiring real credentials (Sentry, GitHub, LLM, Postgres, K8s) — skipped in CI",
]

[tool.coverage.run]
# Couverture honnête : on mesure tout le package applicatif, sans omettre de
# code réel (omettre du code non testé gonflerait artificiellement le ratio).
source = ["collegue"]

[tool.coverage.report]
# Le seuil bloquant vit dans la CI (--cov-fail-under, .github/workflows/tests.yml)
# pour rester visible au niveau du gate ; ici on ne configure que l'affichage.
show_missing = true
# On n'exclut que les lignes jamais exécutées à l'exécution réelle. Pas de
# "raise NotImplementedError" : les stubs abstraits sont de vraies branches non
# testées — les masquer gonflerait le ratio juste avant de poser un gate dessus.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes — all error detection rules
    "I",     # isort — import sorting
    "B",     # flake8-bugbear — common bug patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F", "B"]
"collegue/**/__init__.py" = ["F401"]  # Re-exports in __init__.py are intentional
